[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/objects/trigger-spikes/TriggerSpikeBase.png" type="Texture" id=1]
[ext_resource path="res://src/objects/trigger-spikes/TriggerSpike.gd" type="Script" id=2]
[ext_resource path="res://src/objects/trigger-spikes/TriggerSpike.png" type="Texture" id=3]
[ext_resource path="res://src/objects/moving-bamboo-spike/bamboo-spike.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 1 )

[node name="TriggerSpike" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0, 6 )
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )

[node name="Tween" type="Tween" parent="."]

[node name="InitialDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SpriteBlock" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 120.0
attenuation = 2.2974

[node name="TriggerPadArea2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerPadArea2D"]
position = Vector2( -0.0724659, 7 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
[connection signal="timeout" from="InitialDelayTimer" to="." method="_on_InitialDelayTimer_timeout"]
[connection signal="body_entered" from="TriggerPadArea2D" to="." method="_on_TriggerPadArea2D_body_entered"]
